--- a/wp-content/themes/zts-india/resources/scss/components/_header.scss
+++ b/wp-content/themes/zts-india/resources/scss/components/_header.scss
@@ -1,6 +1,13 @@
 .topbar {
 	padding: 5px 0;
 	background: $red;
+
+	@include breakpoint(medium) {
+		padding: 7px 0;
+		position: relative;
+		z-index: 100;
+	}
+
 	.content-left {
 		ul {
 			margin: 0;
@@ -8,24 +15,34 @@
 			display: flex;
 			flex-wrap: wrap;
 			align-items: center;
+
+			@include breakpoint(medium) {
+				justify-content: center;
+			}
+
 			li {
 				list-style: none;
 				color: $white;
+
 				&:not(:last-child) {
 					margin-right: 15px;
 				}
+
 				&:first-child {
 					margin-right: 20px;
 				}
+
 				a {
 					color: $white;
 					padding-left: 27px;
 					position: relative;
+
 					&:hover {
 						text-decoration: underline !important;
 						text-underline-position: under;
 						text-decoration-thickness: 1px !important;
 					}
+
 					&:before {
 						content: '';
 						position: absolute;
@@ -39,6 +56,7 @@
 						background-position: bottom;
 					}
 				}
+
 				&.india-number {
 					a {
 						&:before {
@@ -49,50 +67,101 @@
 			}
 		}
 	}
+
+	.social-links {
+		@include breakpoint(medium) {
+			display: none;
+		}
+	}
 }
+
 .site-header {
 	padding: 15px 0;
+
 	.header-wrapper {
 		padding: 0 60px;
 		display: flex;
 		flex-wrap: wrap;
 		align-items: center;
+
 		@media screen and (max-width: 1299px) {
 			padding: 0 15px;
 			max-width: 1140px;
-		}        
+		}
+		@include breakpoint(wide) {
+			padding: 0 30px;
+			max-width: 100%;
+		}
+		@include breakpoint(small) {
+			padding: 0 20px;
+		}
+		@include breakpoint(iPhone5) {
+			padding: 0 15px;
+		}
+
 		.site-branding {
 			flex: 0 0 200px;
 			max-width: 200px;
+
 			@include breakpoint(wide) {
 				flex: 0 0 150px;
 				max-width: 150px;
 			}
+
+			@include breakpoint(medium) {
+				flex: 0 0 60%;
+				max-width: 60%;
+				position: relative;
+				z-index: 100;
+			}
+
 			.custom-logo-link {
 				img {
 					width: 100%;
+
+					@include breakpoint(medium) {
+						width: 150px;
+					}
 				}
 			}
 		}
+
 		.main-navigation {
 			flex: 0 0 calc(100% - 280px);
 			max-width: calc(100% - 280px);
 			display: flex;
 			justify-content: center;
 			align-items: center;
+
 			@include breakpoint(wide) {
 				flex: 0 0 calc(100% - 230px);
 				max-width: calc(100% - 230px);
 			}
+
+			@include breakpoint(medium) {
+				max-width: unset;
+				display: block;
+			}
 		}
+
 		.header-right {
+			@include breakpoint(medium) {
+				flex: 0 0 40%;
+				max-width: 40%;
+				display: flex;
+				align-items: center;
+				justify-content: flex-end;
+			}
+
 			ul {
 				display: flex;
 				flex-wrap: wrap;
 				align-items: center;
+
 				li {
 					position: relative;
 					padding: 0 12px;
+
 					&:after {
 						content: '';
 						position: absolute;
@@ -103,12 +172,15 @@
 						right: 0;
 						transform: translateY(-50%);
 					}
+
 					&:last-child {
 						padding-right: 0;
+
 						&:after {
 							content: none;
 						}
 					}
+
 					a {
 						&.header-search {
 							img {
@@ -116,6 +188,7 @@
 								height: 20px;
 							}
 						}
+
 						&.header-phone {
 							img {
 								height: 20px;
@@ -126,6 +199,7 @@
 			}
 		}
 	}
+
 	&.header-sticky {
 		box-shadow: 0 2px 8px 0 rgba($black, 0.25);
 		animation: show-down .6s linear forwards;
@@ -134,13 +208,16 @@
 		width: 100%;
 		top: 0;
 		z-index: 20;
+
 		.header-wrapper {
-			.site-branding {
+			.site-branding {				
+
 				img {
 					max-width: 130px;
 				}
 			}
 		}
+
 		.main-navigation {
 			.menu {
 				li {
@@ -152,6 +229,7 @@
 		}
 	}
 }
+
 .search-overlay {
 	position: fixed;
 	top: -100%;
@@ -161,17 +239,20 @@
 	background: rgba($black, 0.95);
 	z-index: 5;
 	@include transition(0.6s);
+
 	.close-search-overlay {
 		position: fixed;
 		top: 30px;
 		right: 30px;
 		opacity: 0;
 		@include transition(0.4s);
+
 		img {
 			width: 44px;
 			height: 44px;
 		}
 	}
+
 	.search-wrapper {
 		max-width: 475px;
 		margin: 0 auto;
@@ -180,15 +261,19 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
+
 		.header-search-form {
 			padding: 30px 0;
 			width: 100%;
+
 			form {
 				position: relative;
+
 				label {
 					display: block;
 					margin: 0;
 				}
+
 				input[type=search] {
 					border: 0;
 					border-bottom: 2px solid $white;
@@ -198,52 +283,63 @@
 					outline: none;
 					padding-bottom: 6px;
 					width: 100%;
-                    &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-                    	color: $white;
-                    	opacity: 0.7;
-                    }
-                    &::-moz-placeholder { /* Firefox 19+ */
-                    	color: $white;
-                    	opacity: 0.7;
-                    }
-                    &:-ms-input-placeholder { /* IE 10+ */
-                    	color: $white;
-                    	opacity: 0.7;
-                    }
-                    &:-moz-placeholder { /* Firefox 18- */
-                    	color: $white;
-                    	opacity: 0.7;
-                    }
 
-                    // remove search input clear icon
-                    &::-webkit-search-decoration,
-                    &::-webkit-search-cancel-button,
-                    &::-webkit-search-results-button,
-                    &::-webkit-search-results-decoration {
-                    	-webkit-appearance:none;
-                    }
-                }
-                input[type=submit] {
-                	font-size: 0;
-                	height: 38px;
-                	width: 38px;
-                	background-image: url('../../images/icons/search-white.svg');
-                	background-repeat: no-repeat;
-                	background-size: contain;
-                	background-color: transparent;
-                	border: 0;
-                	position: absolute;
-                	top: 0;
-                	right: 0;
-                }
-            }
-        }
-    }
+					&::-webkit-input-placeholder {
+						/* Chrome/Opera/Safari */
+						color: $white;
+						opacity: 0.7;
+					}
+
+					&::-moz-placeholder {
+						/* Firefox 19+ */
+						color: $white;
+						opacity: 0.7;
+					}
+
+					&:-ms-input-placeholder {
+						/* IE 10+ */
+						color: $white;
+						opacity: 0.7;
+					}
+
+					&:-moz-placeholder {
+						/* Firefox 18- */
+						color: $white;
+						opacity: 0.7;
+					}
+
+					// remove search input clear icon
+					&::-webkit-search-decoration,
+					&::-webkit-search-cancel-button,
+					&::-webkit-search-results-button,
+					&::-webkit-search-results-decoration {
+						-webkit-appearance: none;
+					}
+				}
+
+				input[type=submit] {
+					font-size: 0;
+					height: 38px;
+					width: 38px;
+					background-image: url('../../images/icons/search-white.svg');
+					background-repeat: no-repeat;
+					background-size: contain;
+					background-color: transparent;
+					border: 0;
+					position: absolute;
+					top: 0;
+					right: 0;
+				}
+			}
+		}
+	}
 }
+
 body {
 	&.body-search-overlay {
 		.search-overlay {
 			top: 0%;
+
 			.close-search-overlay {
 				transition-delay: 0.6s;
 				opacity: 1;
