--- a/wp-content/themes/zts-india/resources/scss/components/_navigation.scss
+++ b/wp-content/themes/zts-india/resources/scss/components/_navigation.scss
@@ -1,20 +1,85 @@
-.main-navigation {  
+.mobile-menu-wrap {
+  margin-left: 35px;
+}
+.menu-toggle {
+  width: 32px;
+  height: 25px;
+  text-align: right;
+  margin: 0 0 0 auto;
+  cursor: pointer;
+  display: block;
+  @media screen and (min-width: 992px) {
+    display: none;
+  }
+  @include breakpoint(medium) {
+    position: relative;
+    z-index: 100;
+  }
+  span {
+    @include transition(0.3s);
+    display: block;
+    height: 4px;
+    border-radius: 20px;
+    width: 100%;
+    background: $black;
+    margin: 0 0 6px auto;
+    &:nth-child(3) {
+      margin-top: -10px;
+    }
+  }
+}
+.main-navigation {
+  @include breakpoint(medium) {
+    position: fixed;
+    width: 42%;
+    height: 100%;
+    background: $color_text;
+    top: -100%;
+    left: 0;
+    @include transition(0.4s);
+    padding: 20% 0 25px;
+    z-index: 99;
+  }
+  @include breakpoint(small) {
+    width: 100%;
+  }
+  .menu-primary-menu-container {
+    @include breakpoint(medium) {
+      padding: 0 44px;
+      height: 100%;
+      overflow: auto;
+    }
+  }
+
   .menu {
     padding: 0;
     margin: 0;
     display: flex;
     flex-wrap: wrap;
+    @include breakpoint(medium) {
+      flex-direction: column;
+    }
+
     li {
       list-style: none;
+      @include breakpoint(medium) {
+        padding: 15px 0;
+      }
+      @media screen and (max-width: 991px) {
+        padding: 12px 0;
+      }
       &:not(:last-child) {
         margin-right: 30px;
+
         @media screen and (max-width: 1429px) {
           margin-right: 30px;
         }
+
         @media screen and (max-width: 1299px) {
           margin-right: 25px;
-        }        
+        }
       }
+
       a {
         font-weight: 400;
         color: $color_text;
@@ -22,31 +87,42 @@
         font-size: 18px;
         text-transform: uppercase;
         font-family: $font_roboto;
+
         @include breakpoint(wide) {
           font-size: 16px;
         }
+        @include breakpoint(medium) {
+          font-size: 18px;
+          font-weight: 500;
+          color: $white;
+        }
       }
+
       &:hover,
       &.current-menu-item {
-        > a {
+        >a {
           color: $red;
         }
       }
+
       &.current-menu-item {
-        > a {
+        >a {
           font-weight: 600;
         }
       }
     }
   }
 }
+
 body {
   &.menu-opened {
     overflow: hidden;
+
     .site-header {
       &.header-sticky {
         height: 100%;
       }
+
       .header-wrapper {
         .header-right {
           .hamburger-menu {
@@ -54,10 +130,12 @@ body {
               transform-origin: center;
               opacity: 0;
               background: $black;
+
               &:nth-child(2) {
                 transform: rotate(45deg);
                 opacity: 1;
               }
+
               &:nth-child(3) {
                 transform: rotate(-45deg);
                 opacity: 1;
@@ -66,53 +144,83 @@ body {
           }
         }
       }
+
       .main-navigation {
         left: 0;
       }
     }
   }
 }
+
 body {
   &.single-services {
-      .main-navigation {
-          .menu {
-              li {
-                  &.menu-services {
-                      > a {
-                          color: $red;
-                          font-weight: 600;
-                      }
-                  }
-              }
-          }
-      }
-  }
-  &.single-post {
     .main-navigation {
-        .menu {
-            li {
-                &.menu-blog {
-                    > a {
-                        color: $red;
-                        font-weight: 600;
-                    }
-                }
+      .menu {
+        li {
+          &.menu-services {
+            >a {
+              color: $red;
+              font-weight: 600;
             }
+          }
         }
+      }
     }
   }
+
+  &.single-post {
+    .main-navigation {
+      .menu {
+        li {
+          &.menu-blog {
+            >a {
+              color: $red;
+              font-weight: 600;
+            }
+          }
+        }
+      }
+    }
+  }
+
   &.single-portfolio {
     .main-navigation {
-        .menu {
-            li {
-                &.menu-portfolio {
-                    > a {
-                        color: $red;
-                        font-weight: 600;
-                    }
-                }
+      .menu {
+        li {
+          &.menu-portfolio {
+            >a {
+              color: $red;
+              font-weight: 600;
             }
+          }
         }
+      }
+    }
+  }
+}
+
+body {
+  &.body-menu-opened {
+    overflow: hidden;
+    .menu-toggle {
+      span {
+        transform-origin: center;
+        opacity: 0;
+        @include breakpoint(small) {
+          background-color: $white;
+        }
+        &:nth-child(2) {
+          transform: rotate(45deg);
+          opacity: 1;
+        }
+        &:nth-child(3) {
+          transform: rotate(-45deg);
+          opacity: 1;
+        }
+      }
+    }
+    .main-navigation {
+      top: 0%;
     }
   }
 }
