--- a/wp-content/themes/zts-india/resources/scss/layout/_common.scss
+++ b/wp-content/themes/zts-india/resources/scss/layout/_common.scss
@@ -45,6 +45,9 @@ a {
 }
 .py-60 {
     padding: 60px 0;
+    @include breakpoint(ipadpro) {
+        padding: 45px 0;
+    }
 }
 .pt-40 {
     padding-top: 40px;
