--- a/wp-content/themes/zts-india/resources/scss/pages/_homepage.scss
+++ b/wp-content/themes/zts-india/resources/scss/pages/_homepage.scss
@@ -12,6 +12,10 @@
 		@include breakpoint(wide) {
 			max-width: 50%;
 		}
+		@include breakpoint(medium) {
+			max-width: 80%;
+			padding: 0;
+		}
 
 		h4 {
 			background: $soft_blue;
@@ -24,6 +28,9 @@
 			margin: 0 0 30px;
 			font-weight: 300;
 			color: $color_text;
+			@include breakpoint(medium) {
+				color: $white;
+			}
 
 			strong {
 				font-weight: 500;
@@ -56,12 +63,34 @@
 		@media screen and (max-width: 1299px) {
 			width: 45%;
 		}
+		@include breakpoint(medium) {
+			height: 100%;
+			width: 100%;
+			z-index: -1;
+			min-height: unset;
+			right: 0;
+		}
+		&:after {
+			position: absolute;
+			top: 0;
+			left: 0;
+			height: 100%;
+			width: 100%;
+			background-color: rgba($black, 0.6);
+			background-blend-mode: multiply;
+			@include breakpoint(medium) {
+				content: '';
+			}
+		}
 
 		img {
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
 			animation: border-transform-default 10s linear infinite alternate forwards;
+			@include breakpoint(medium) {
+				animation: none;
+			}
 		}
 	}
 }
@@ -88,12 +117,21 @@
 		border-radius: 7px;		
 		border: 1px solid #eeeff1;
 		height: 100%;
-
+		@include breakpoint(medium) {
+			padding: 45px 30px;
+		}
+		@include breakpoint(small) {
+			padding: 30px 20px;
+		}
+		
 		.card-image {
 			text-align: center;
-
+			
 			img {
 				margin: 0 0 30px;
+				@include breakpoint(small) {
+					width: 60px;
+				}
 			}
 		}
 
@@ -124,6 +162,9 @@
 				line-height: 2;
 				color: $color_text;
 				font-size: 16px;
+				@include breakpoint(medium) {
+					line-height: 1.77;
+				}
 			}
 
 			.button-wrap {}
@@ -246,6 +287,12 @@
 .left-content-right-image {
 	background-color: rgba($grey, 0.1);
 	padding: 100px 0 60px;
+	@include breakpoint(medium) {
+		padding: 80px 0 60px;
+	}
+	@include breakpoint(small) {
+		padding: 60px 0 40px;
+	}
 
 	.content-left {
 		padding-left: calc((100vw - 1285px) / 2);
@@ -280,8 +327,11 @@
 	.company-stats {
 		padding-left: 45px;
 		padding-right: 15px;
+		@include breakpoint(medium) {
+			padding: 35px 0 0;;
+		}
 
-		.col-lg-6 {
+		.col-md-6 {
 			margin: 0 0 20px;
 
 			&:nth-child(2) {
@@ -289,6 +339,9 @@
 					margin-top: 100px;
 					@include breakpoint(wide) {
 						margin-top: 50px;
+					}
+					@include breakpoint(medium) {
+						margin-top: 0;
 					}
 				}
 			}
@@ -298,6 +351,9 @@
 					margin-top: -100px;
 					@include breakpoint(wide) {
 						margin-top: -30px;
+					}
+					@include breakpoint(medium) {
+						margin-top: 0;
 					}
 				}
 			}
@@ -351,7 +407,7 @@
 }
 
 .service-cat-section {
-	padding-bottom: 40px;
+	padding-bottom: 40px;	
 
 	.row {
 		.col-lg-4 {
@@ -361,6 +417,7 @@
 }
 
 .service-cat-card {
+	height: 100%;
 	.card-inner {
 		padding: 30px 20px;
 		position: relative;
@@ -369,6 +426,7 @@
 		@include transition(all 0.3s ease-out 0s);
 		border: 1px solid rgba($grey, 0.25);
 		background: $white;
+		height: 100%;
 
 		&:before {
 			position: absolute;
@@ -395,6 +453,9 @@
 				display: block;
 				transform: translateY(0px);
 				@include transition(0.4s);
+				@include breakpoint(small) {
+					width: 60px;
+				}
 			}
 		}
 
@@ -471,11 +532,27 @@
 .faq-section {
 	padding: 80px 15px;
 	overflow: hidden;
+	@include breakpoint(medium) {
+		padding-top: 0;
+	}
+	@include breakpoint(small) {
+		padding-bottom: 60px;
+	}
 
 	.why-choose-content,
 	.faq-content {
 		max-width: 600px;
 		margin: 0 0 0 auto;
+		@include breakpoint(medium) {
+			max-width: 100%;
+			padding: 35px 15px 0;
+		}
+		@include breakpoint(small) {
+			padding: 30px 5px 0;
+		}
+		@include breakpoint(iPhone5) {
+			padding: 30px 0 0;
+		}
 
 		.list-content {
 			ul {
@@ -519,6 +596,10 @@
 	.why-choose-image {
 		width: calc(100% + 15px);
 		position: relative;
+		@include breakpoint(medium) {
+			width: calc(100% + 30px);
+			left: -15px;
+		}
 	}
 }
 
@@ -528,7 +609,7 @@
 	}
 
 	.why-choose-image {
-		left: -15px;
+		left: -15px;		
 
 		img {
 			width: 100%;
@@ -571,7 +652,20 @@
 	.container-wrapper {
 		padding-left: calc((100vw - 1270px) / 2);
 	}
-
+	.row {
+		.col-lg-6 {
+			&:first-child {
+				@include breakpoint(medium) {
+					order: 2;
+				}
+			}
+			&:last-child {
+				@include breakpoint(medium) {
+					order: 1;
+				}
+			}
+		}
+	}
 	.faq-image {
 		text-align: right;
 
@@ -657,8 +751,14 @@
 }
 
 .our-work-section {
+	@include breakpoint(small) {
+		padding-bottom: 30px;
+	}
 	.project-wrapper {
 		padding-bottom: 20px;
+		@include breakpoint(small) {
+			padding-bottom: 0;
+		}
 
 		.project-filter {
 			padding: 0 0 40px;
@@ -716,6 +816,14 @@
 				max-width: 33.33%;
 				padding: 0 15px;
 				margin: 0 0 30px;
+				@include breakpoint(medium) {
+					flex: 0 0 50%;
+					max-width: 50%;
+				}
+				@include breakpoint(smaller) {
+					flex: 0 0 100%;
+					max-width: 100%;
+				}
 
 				.card-inner {
 					position: relative;
@@ -798,6 +906,9 @@
 
 .testimonial-section {
 	padding: 40px 0 80px;
+	@include breakpoint(small) {
+		padding: 40px 0 60px;
+	}
 
 	.testimonial-left {
 		.section-title {
@@ -811,6 +922,18 @@
 					content: none;
 				}
 			}
+			h2 {
+				br {
+					@include breakpoint(medium) {
+						display: none;
+					}
+				}
+			}
+		}
+		.button-wrap {
+			@include breakpoint(medium) {
+				padding-bottom: 45px;
+			}
 		}
 	}
 
@@ -819,6 +942,9 @@
 			width: 315px;
 			margin-right: auto;
 			margin-left: 0;
+			@include breakpoint(iPhone5) {
+				width: 100%;
+			}
 
 			.img-holder {
 				position: relative;
@@ -891,11 +1017,20 @@
 						font-weight: 400;
 						line-height: 1.77;
 						margin: 0;
+						@include breakpoint(small) {
+							font-size: 22px;
+						}
+						@include breakpoint(extrasmall) {
+							font-size: 18px;
+						}
 					}
 				}
 
 				.client-info {
 					padding-top: 35px;
+					@include breakpoint(medium) {
+						max-width: 80%;
+					}
 
 					h4 {
 						color: $red;
@@ -965,9 +1100,11 @@
 
 		.awards-block {
 			padding: 0 10px;
-			height: 140px;
 			width: auto;
 			height: auto;
+			@include breakpoint(medium) {
+				height: 100px;
+			}
 
 			.block-inner {
 				display: flex;
@@ -982,6 +1119,10 @@
 					// height: 100%;
 					mix-blend-mode: multiply;
 					@include transition(0.4s);
+					@include breakpoint(medium) {
+						height: 100%;
+						width: auto;
+					}
 				}
 
 				&:hover {
@@ -995,7 +1136,7 @@
 }
 
 .blog-section {
-	padding: 60px 0;
+	padding: 60px 0 10px;
 
 	.section-title {
 		margin-bottom: 45px;
@@ -1052,6 +1193,10 @@
 			min-height: 450px;
 			height: 100%;
 			padding: 30px;
+			@include breakpoint(small) {
+				min-height: auto;
+				padding: 50px 20px;
+			}
 
 			&:before {
 				content: '';
@@ -1102,6 +1247,12 @@
 						width: 100%;
 						text-align: center;
 					}
+					@include breakpoint(ipadpro) {
+						padding-bottom: 35px;
+					}
+					@include breakpoint(smaller) {
+						padding-bottom: 30px;
+					}
 					
 					&:before {
 						content: '';
@@ -1136,7 +1287,13 @@
 						font-size: 26px;
 						margin: 0;
 						font-weight: 400;
-						display: inline-block;						
+						display: inline-block;
+						@include breakpoint(ipadpro) {
+							font-size: 22px;
+						}
+						@include breakpoint(smaller) {
+							font-size: 20px;
+						}
 
 						&:before {
 							content: '';
